--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: cyberchef
 title: CyberChef
-base: core20
+base: core22
 adopt-info: cyberchef
 summary: The Cyber Swiss Army Knife for encryption, encoding, compression and analysis.
 description: |
@@ -34,13 +34,13 @@ parts:
     override-build: |
       wget https://github.com/gchq/CyberChef/releases/latest
       VERSION=`cat latest| grep "Release" | head -n 1 | cut "-d " -f 4`
-      snapcraftctl set-version ${VERSION}
+      craftctl set version=${VERSION}
       wget "https://github.com/gchq/CyberChef/releases/download/${VERSION}/CyberChef_${VERSION}.zip"
-      unzip CyberChef_${VERSION}.zip -d $SNAPCRAFT_PART_INSTALL/
-      mv $SNAPCRAFT_PART_INSTALL/CyberChef_${VERSION}.html $SNAPCRAFT_PART_INSTALL/index.html
-      cp ./server.py  $SNAPCRAFT_PART_INSTALL/
-      echo -e '#!/bin/bash\n\nset -e\n\nnohup python3 $SNAP/server.py &>/dev/null &\n\nsleep 0.3 && xdg-open http://localhost:9090' > $SNAPCRAFT_PART_INSTALL/cyberchef
-      chmod +x $SNAPCRAFT_PART_INSTALL/cyberchef
+      unzip CyberChef_${VERSION}.zip -d $CRAFT_PART_INSTALL/
+      mv $CRAFT_PART_INSTALL/CyberChef_${VERSION}.html $CRAFT_PART_INSTALL/index.html
+      cp ./server.py  $CRAFT_PART_INSTALL/
+      echo -e '#!/bin/bash\n\nset -e\n\nnohup python3 $SNAP/server.py &>/dev/null &\n\nsleep 0.3 && xdg-open http://localhost:9090' > $CRAFT_PART_INSTALL/cyberchef
+      chmod +x $CRAFT_PART_INSTALL/cyberchef
 
 apps:
   cyberchef:
