--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -18,10 +18,22 @@ license: GPL-3.0-or-later
 source-code: https://github.com/gchq/CyberChef
 issues: https://github.com/JitPatro/CyberChef-Snap/issues
 
-architectures:
-  - build-on: amd64
-  - build-on: arm64
-  - build-on: armhf
+
+platforms:
+  amd64:
+    build-on: [amd64]
+  arm64:
+    build-on: [arm64]
+  armhf:
+    build-on: [armhf]
+  ppc64el:
+    build-on: [ppc64el]
+  s390x:
+    build-on: [s390x]
+# architectures:
+#   - build-on: amd64
+#   - build-on: arm64
+#   - build-on: armhf
 
 parts:
   cyberchef:
